# GlobalProtect-openconnect

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  pr.yml
GPClient/: CMakeLists.txt  com.yuezk.qt.gpclient.desktop.in  com.yuezk.qt.gpclient.metainfo.xml.in  enhancedwebpage.h  gphelper.cpp  portalconfigresponse.cpp  samlloginwindow.cpp
GPService/: CMakeLists.txt
scripts/: install-debian.sh  release.sh
